--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,44 +12,19 @@
                 <%- include('nav-common'); %>
             </div>
         </div> 
-        <div id="collapseOne" aria-labelledby="headingOne" data-parent="#accordionExample" class="collapse hide" style="background-color: rgb(233, 234, 236); position: absolute; max-width: 700px; width: 100%; z-index: 1; right: 0px;">
+        <div id="collapseOne" aria-labelledby="headingOne" data-parent="#accordionExample" class="collapse hide" style="background-color: rgb(233, 234, 236);position: absolute;max-width: 400px;width: 100%;z-index: 1;right: 20%;box-shadow: 0px 0px 5px #666;border-radius: 10px;">
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-12" style="margin-bottom: 20px;">
                         <h2>Talk to an expert</h2> 
                         <p class="lead">We've got phone and chat support available for you:</p>
                     </div> 
-                    <div class="col-md-6" style="margin-bottom: 20px;">
+                    <div class="col-md-12" style="margin-bottom: 20px;">
                         <span class="title-separator"></span> 
                         <table class="tbl-contact"><tbody><tr><td>Monday:</td> <td>Friday : 7am to 7pm (EST)</td></tr> <tr><td>Saturday:</td> <td>Closed</td></tr> <tr><td>Sunday:</td> <td>Closed</td></tr> <tr><td>Toll-Free:</td> <td><b style="color: rgb(20, 117, 169);">1-800-293-3166</b></td></tr> <tr><td>Office:</td> <td><b style="color: rgb(20, 117, 169);">212-468-5500</b></td></tr> <tr><td>Fax:</td> <td><b style="color: rgb(20, 117, 169);">212-504-0888</b></td></tr></tbody></table> 
                         <a href="javascript:$zopim.livechat.window.show();" class="btn btn-black" style="padding: 10px 20px; border-radius: 30px 30px 0px;">
                         Chat <span class="fa fa-comments" style="font-size: 21px; padding: 0px 10px; color: rgb(255, 255, 255);"></span></a>
                     </div> 
-                    <div class="col-md-6">
-                        <div class="contact-div">
-                            <h3 style="padding-left: 10px;">Stuck?</h3> 
-                            <h5 style="padding-left: 10px;">Bet we can help.</h5>
-                        </div> 
-                        <form method="POST" action="/contact"><input type="hidden" name="_token" value="oxnjA3xpjL9Ng4X2uRWxEmjUWgFSQFjK7pKvPpif"> 
-                            <div class="form-group">
-                                <label for="name"><b>Name:</b></label> 
-                                <input type="name" id="name" value="" placeholder="Enter name" name="name" required="required" class="form-control">
-                            </div> 
-                            <div class="form-group">
-                                <label for="email"><b>Email:</b></label> 
-                                <input type="email" value="" id="email" placeholder="Enter email" name="email" required="required" class="form-control">
-                            </div> 
-                            <div class="form-group">
-                                <label for="phone"><b>Phone:</b></label> 
-                                <input type="text" value="" id="phone" placeholder="Enter phone" name="phone" required="required" class="form-control">
-                            </div> 
-                            <div class="form-group">
-                                <label for="msg"><b>Message:</b></label> 
-                                <textarea value="" rows="7" name="message" required="required" class="form-control"></textarea>
-                            </div> 
-                            <button type="submit" class="btn btn-black btn-rounded-primary">Submit</button>
-                        </form>
-                    </div>
                 </div>
             </div>
         </div>
