--- a/views/partials/footer-scripts.ejs
+++ b/views/partials/footer-scripts.ejs
@@ -4,3 +4,7 @@
   crossorigin="anonymous"></script>
 <script src="/bootstrap/dist/js/bootstrap.js" defer=""></script>
 <script src="/javascripts/scripts.js" defer=""></script>
+
+<!-- Start of  Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=e72f7c51-bfd9-49d3-83d6-3ae8a0f1728f"> </script>
+<!-- End of  Zendesk Widget script -->
