--- a/public/stylesheets/less/_content.less
+++ b/public/stylesheets/less/_content.less
@@ -156,3 +156,14 @@
         color: #6789da;
     }
 }
+
+.continentsToggle {
+    li{
+        cursor: pointer;
+
+        &.active{
+            color: #000;
+            background: #E4F5FF;
+        }
+    }
+}
