--- a/public/stylesheets/less/_content.less
+++ b/public/stylesheets/less/_content.less
@@ -167,3 +167,20 @@
         }
     }
 }
+
+.btn-new{
+
+    font-size: 10px;
+    margin-left: 20px;
+    border: 1px solid #28a745;
+    padding: 7px 11px;
+    width: 115px;
+    background: #28a745;
+    color: #fff;
+    cursor: pointer;
+
+    .fa{
+        color: #fff;
+    }
+
+}
