--- a/views/partials/footer-scripts.ejs
+++ b/views/partials/footer-scripts.ejs
@@ -8,3 +8,5 @@
 <!-- Start of  Zendesk Widget script -->
 <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=e72f7c51-bfd9-49d3-83d6-3ae8a0f1728f"> </script>
 <!-- End of  Zendesk Widget script -->
+
+<script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
