--- a/views/partials/nav-common.ejs
+++ b/views/partials/nav-common.ejs
@@ -112,13 +112,13 @@
 
 </nav> 
 
-<div id="contact">
+<!-- <div id="contact">
     <div id="accordionExample">
         <button type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="btn btn-transparent">
             Contact Us
         </button>
     </div>
-</div> 
+</div>  -->
 <ul class="header-nav">
     <li class="nav-item">
         <a href="/login" class="nav-link">Login</a>
