--- a/views/partials/researcher_side_nav.ejs
+++ b/views/partials/researcher_side_nav.ejs
@@ -5,6 +5,7 @@
     <div class="card-body">
         <ul class="list-group list-group-flush">
             <li class="list-group-item"><a href="/researcher/tasks">My Task</a></li>
+            <li class="list-group-item"><a href="/researcher/events">My Events</a></li>
             <li class="list-group-item"><a href="/researcher/leads">My Leads</a></li>
             <li class="list-group-item"><a href="#" data-toggle="modal" data-target="#faqModal">FAQ</a></li>
             <li class="list-group-item"><a href="/login">Logout</a></a></li>
