--- a/views/researcher/events-edit.ejs
+++ b/views/researcher/events-edit.ejs
@@ -1,4 +1,6 @@
 <div class="col-md-12" style="margin-bottom:20px;">    
-    <h2>My Dashboard</h2>
+    <h2>Edit Event</h2>
+
+    
 </div>
-                    
+        
