--- a/views/researcher/tasks/index.ejs
+++ b/views/researcher/tasks/index.ejs
@@ -14,7 +14,7 @@
     <% } %>
     
     <% if (task) { %>
-    <h3 class="text-center">Completion Date</h3>
+    <h3 class="text-center">Completion Date <%= moment(task.complication_date).format('MMM D, YYYY') %></h3>
     <ul class="task-list">
         
         <% task.details.forEach(function(userTask,key) { %>
@@ -26,7 +26,9 @@
                         <span class="task-status pending"><%= userTask.task_status %></span>
                     </h4>
                     <p class="card-text"><%= userTask.task_description %></p>
+                    <% if(userTask.task_status != 'review') { %>
                     <a href="/researcher/tasks/<%= task._id %>-<%= userTask.task_number %>" class="btn btn-primary" >Update Task</a>
+                    <% } %>
                 </div>
             </div>
         </li>
