--- a/views/partials/admin_side_nav.ejs
+++ b/views/partials/admin_side_nav.ejs
@@ -6,6 +6,7 @@
         <ul class="list-group list-group-flush">
             <li class="list-group-item"><a href="/njs-admin/manage/tasks">Manage Task</a></li>
             <li class="list-group-item"><a href="/njs-admin/manage/events">Manage Events</a></li>
+            <li class="list-group-item"><a href="/njs-admin/manage/leads">Manage Leads</a></li>
             <li class="list-group-item"><a href="/login">Logout</a></a></li>
         </ul>
     </div>
