--- a/views/partials/researcher_header.ejs
+++ b/views/partials/researcher_header.ejs
@@ -5,7 +5,7 @@
         </div>
 
         <ul class="nav navbar-nav navbar-right">
-           <li><a href="/login">Logout</a></li>
+           <li><a href="/login/expired">Logout</a></li>
         </ul>
 
     </div>
