--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -315,3 +315,13 @@
 		</div>
 	</div>
 </div>
+
+
+<h1>Socket Connection Status: <span id="connection"></span></h1>
+<h1>Login User Id: <span id="userid"></span></h1>
+<h1>Login User Email: <span id="email"></span></h1>
+<h1>Public Message: <span id="receive-my-message"></span></h1>
+
+
+
+</script>
