--- a/public/stylesheets/less/_content.less
+++ b/public/stylesheets/less/_content.less
@@ -189,3 +189,15 @@
     }
 
 }
+
+.card-status{
+    padding: 15px;
+    margin-bottom : 20px;
+
+    p{
+        margin: 0 0 10px 0;
+        span{
+            text-transform: uppercase;
+        }
+    }
+}
