--- a/views/admin/tasks/add.ejs
+++ b/views/admin/tasks/add.ejs
@@ -58,7 +58,7 @@
         <div class="col-md-12">
             <span id="add-block" class="btn btn-primary">Add Task</span>
             <p class="text-center">
-                <button type="submit" class="btn btn-primary btn-rounded-primary" style="padding-left:40px;padding-right:40px;">Add Event</button>
+                <button type="submit" class="btn btn-primary btn-rounded-primary" style="padding-left:40px;padding-right:40px;">Create Task</button>
             </p>
         </div>
 
