--- a/views/partials/footer-scripts-admin.ejs
+++ b/views/partials/footer-scripts-admin.ejs
@@ -7,4 +7,4 @@
 <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
 
 <script src="/javascripts/admin-scripts.js" defer=""></script>
-<script src="/javascripts/connection.js" defer=""></script>
+<!-- <script src="/javascripts/connection.js" defer=""></script> -->
