--- a/views/partials/footer-scripts.ejs
+++ b/views/partials/footer-scripts.ejs
@@ -10,4 +10,4 @@
 <!-- End of  Zendesk Widget script -->
 
 <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
-<script src="/javascripts/connection.js" defer=""></script>
+<!-- <script src="/javascripts/connection.js" defer=""></script> -->
