--- a/views/admin/oppositionLeads/index.ejs
+++ b/views/admin/oppositionLeads/index.ejs
@@ -19,6 +19,7 @@
             <tr>
                 <th>Applicant Name</th>
                 <th>Word Mark</th>
+                <th>Class</th>
                 <th>Serial Number</th>
                 <th>Office Status</th>
                 <!-- <th>Lead Status</th> -->
@@ -31,6 +32,7 @@
                 <tr>
                     <td><%= lead.applicantname %></td>
                     <td><%= lead.name %></td>
+                    <td><%= lead.nice %></td>
                     <td><%= lead.number %></td>
                     <td><%= lead.status %></td>
                     <!-- <td><%= lead.lead_status %></td> -->
