--- a/views/admin/leads/add.ejs
+++ b/views/admin/leads/add.ejs
@@ -121,7 +121,7 @@
 
     </form>
     <% } else { %>
-        <p>Sorry, no active task found</p>p>
+        <p>Sorry, no active task found</p>
     <% } %>
 </div>
         
