--- a/views/researcher/events/add.ejs
+++ b/views/researcher/events/add.ejs
@@ -92,7 +92,7 @@
 
     </form>
     <% } else { %>
-        <p>Sorry, no active task found</p>p>
+        <p>Sorry, no active task found</p>
     <% } %>
 </div>
         
